css/banner.css
@import url(./varaibles.css);

.intro_section {
    padding-top: 15rem;
    padding-bottom: 5rem;
    text-align: center;
    cursor:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='50' height='60' viewport='0 0 100 100' style='fill:black;font-size:30px;'><text y='50%'>📧</text></svg>") 16 0,auto; /*!emojicursor.app*/
}

/****** Computer box **********/
.computer_background {
    position: relative;
}

.computer_background a {
    cursor: url("../assets/email.png"), auto;
}

.computer_sad, .computer_happy {
    
}

.computer_sad img, .computer_happy img{
    width: 15rem;
}

.computer_sad.hide, .computer_happy.hide {
    display: none;
}

/************** Intro Text **********/
.intro_context {
    padding: 0 0.2rem;
}

.introduction, .intro_context p {
    color: var(--primary-color);
}

.introduction span {
    color: var(--important-color);
}

.intro_context p {
    font-style: italic;

}

.intro_context .social_links a {
    color: var(--link-color);
    text-decoration: none;
    font-size: 2rem;
}

.social_links a {
    padding: 5px;
    cursor:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='50' height='60' viewport='0 0 100 100' style='fill:black;font-size:30px;'><text y='50%'>👆</text></svg>") 16 0,auto; /*!emojicursor.app*/
    transition: 300ms linear;
}

.social_links a:hover {
    color: var(--important-color);
}

